Fix: Let long locationnames overflow on same line instead of newline

--- a/sigmah/src/main/java/org/sigmah/client/page/entry/editor/LocationStyle.css
+++ b/sigmah/src/main/java/org/sigmah/client/page/entry/editor/LocationStyle.css
@@ -12,6 +12,8 @@
 	vertical-align: middle;
 	font-size: 11px;
 	font-weight: bold;
+	white-space: nowrap;
+	overflow:hidden;
 }
 
 .locationAxe {
